Feature/ability (#4)
* modulo ability

* update container

* modulo de usuarios

* fix: corregir modelo y repositorio de assigned_roles para coincidir con estructura de BD

* refactor: eliminar campos CreatedAt y UpdatedAt no utilizados de AssignedRole

* fix test

* update swagger
