# docs/swagger.yaml
@@ -101,8 +101,10 @@ definitions:
         type: integer
       entity_type:
         type: string
-      restricted:
-        type: boolean
+      restricted_to_id:
+        type: integer
+      restricted_to_type:
+        type: string
       role_id:
         type: integer
       scope:
@@ -114,8 +116,6 @@ definitions:
     type: object
   assigned_role.AssignedRoleResponse:
     properties:
-      created_at:
-        type: string
       entity_id:
         type: integer
       entity_type:
@@ -128,8 +128,6 @@ definitions:
         type: integer
       scope:
         type: integer
-      updated_at:
-        type: string
     type: object
   auth.LoginRequest:
     properties:
@@ -631,9 +629,11 @@ paths:
     post:
       consumes:
       - application/json
-      description: Asigna un rol a una entidad
+      description: Asigna un rol a una entidad (usuario, cliente, etc). Opcionalmente
+        puede restringir la asignación a una entidad específica usando restricted_to_id
+        y restricted_to_type
       parameters:
-      - description: Datos de la asignación de rol
+      - description: 'Datos de la asignación de rol. Ejemplo: {\'
         in: body
         name: role
         required: true
@@ -643,11 +643,15 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Rol asignado exitosamente
           schema:
             $ref: '#/definitions/assigned_role.AssignedRoleResponse'
         "400":
           description: Error al decodificar la solicitud o datos inválidos
+          schema:
+            type: string
+        "403":
+          description: No tiene permisos para asignar roles
           schema:
             type: string
         "409":
@@ -660,7 +664,7 @@ paths:
             type: string
       security:
       - BearerAuth: []
-      summary: Asignar rol
+      summary: Asignar rol a una entidad
       tags:
       - AssignedRoles
   /api/v1/assigned-roles/{id}:
